--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,35 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/app" }
+  "version": 3,
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "static/**/*",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "jars/**/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/jars/(.*)",
+      "dest": "/jars/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg|txt|jar))",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/app.py"
+    }
   ]
 }
